trunk/Archive2/b2/52f625acc0c7df/output
main.cpp: In function ‘int main()’:
main.cpp:13:51: error: conversion from ‘gen_seq<seq<ix<0, 0>, ix<0, 0>, ix<0, 0>, ix<1, 0>, ix<1, 0> >, 2, 0>::type {aka seq<ix<0, 0>, ix<0, 0>, ix<0, 0>, ix<1, 0>, ix<1, 0> >}’ to non-scalar type ‘main()::<anonymous struct>’ requested
     struct {}_ = gen_seq<seq<>, 0, 0, 3, 2>::type();
                                                   ^
